--- a/guestbook/qa-guestbook-ui-svc.yaml
+++ b/guestbook/qa-guestbook-ui-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: guestbook-ui
+  name: qa-guestbook-ui
 spec:
   ports:
-    - port: 80
+    - port: 90
       targetPort: 80
   selector:
-    app: guestbook-ui
+    app: qa-guestbook-ui
